--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="style.css">
+        <h1> Discover hidden places in the world around you </h1>
+            <a href=""> Download Excursion (coming soon) </a>
 
+    </head>
+</html>
