--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link href="style.css">
         <h1> Discover hidden places in the world around you </h1>
             <a href=""> Download Excursion (coming soon) </a>
+            <p> This is testing</p>
 
     </head>
 </html>
