--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css">
+        <link href="style.css" rel="stylesheet">
         <h1> Discover hidden places in the world around you </h1>
-            <a href=""> Download Excursion (coming soon) </a>
-            <p> This is testing</p>
-
     </head>
+    <body>
+        <h1> Discover hidden places in the world around you</h1>
+        <a href=""> Download Excursion (coming soon) </a>
+        <video src="/excursion.mp4" height= 100%, width= 100% autoplay>
+        </video>
+        <h2> Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="camp.jpg" width=100%, height=100%>
+        <img src="phone.png" width=100%, height=100%>
+        <h2> Coming soon for iphone and Android </h2>
+        <a href=""> Download Excursion (coming soon) </a>
+    </body>
+    <footer>
+         &copy; Excursion
+    </footer>
 </html>
