--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet">
+        <link href="/Resources/css/style.css" rel="stylesheet">
         <h1> Discover hidden places in the world around you </h1>
     </head>
     <body>
