Cleared some visuals

--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
     <head>
         <link href="Resources/css/style.css" type="text/css" rel="stylesheet">
 
-        <h1> Discover hidden places in the world around you </h1>
     </head>
     <body>
         <h1> Discover hidden places in the world around you</h1>
         <a href=""> Download Excursion (coming soon) </a>
-        <video src="/excursion.mp4" height= 100%, width= 100% autoplay>
+        <video class="exc" src="excursion.mp4" autoplay>
         </video>
         <h2> Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="camp.jpg" width=100%, height=100%>
-        <img src="phone.png" width=100%, height=100%>
+        <img class="camp" src="camp.jpg">
+        <img class="logo" src="phone.png">
         <h2> Coming soon for iphone and Android </h2>
         <a href=""> Download Excursion (coming soon) </a>
     </body>
