--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1> Discover hidden places in the world around you</h1>
         <a href=""> Download Excursion (coming soon) </a>
-        <video class="exc" src="excursion.mp4" autoplay>
+        <video class="exc" src="excursion.mp4" autoplay controls>
         </video>
         <h2> Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
