--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <body>
         <h1> Discover hidden places in the world around you</h1>
         <a href=""> Download Excursion (coming soon) </a>
+        <br>
+        <p>
         <video class="exc" src="excursion.mp4" autoplay controls>
-        </video>
+        </video></p>
         <h2> Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img class="camp" src="camp.jpg">
-        <img class="logo" src="phone.png">
+        <p> <img class="camp" src="camp.jpg"></p> <br>
+        <p>
+        <img class="logo" src="phone.png"></p> <br>
         <h2> Coming soon for iphone and Android </h2>
         <a href=""> Download Excursion (coming soon) </a>
     </body>
