Solve autoplay feature

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <a href=""> Download Excursion (coming soon) </a>
         <br>
         <p>
-        <video class="exc" src="excursion.mp4" autoplay muted loop>
+        <video class="exc" src="excursion.mp4" playsinline  autoplay muted loop>
         </video></p>
         <h2> Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
